[package]
name = "swamp-loader-plugin"
version = "0.0.9"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]

[dependencies]
tracing = "0.1.40"

swamp-loader = { path = "../swamp-loader", version = "0.0.9" }
swamp-app = { path = "../swamp-app", version = "0.0.9" }
message-channel = "0.0.1"
swamp-assets = { path = "../swamp-assets", version = "0.0.9" }

future-runner = { version = "0.0.1", features = [] }
