[package]
name = "swamp-loader"
version = "0.0.9"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"

[dependencies]
message-channel = "0.0.1"
swamp-assets = { path = "../swamp-assets", version = "0.0.9" }
chunk-reader = "0.0.1"

[dev-dependencies]
tokio = { version ="1.41.1" , features = ["tokio-macros"]}
