[package]
name = "swamp-asset-image"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "image asset loading"


[dependencies]
swamp-app = { path = "../swamp-app", version = "0.0.10" }
swamp-assets-loader = { path = "../swamp-assets-loader", version = "0.0.10" }
swamp-wgpu-sprites = { path = "../swamp-wgpu-sprites", version = "0.0.10" }
swamp-wgpu-window = { path = "../swamp-wgpu-window", version = "0.0.10" }
swamp-render-wgpu = { path = "../swamp-render-wgpu", version = "0.0.10" }
swamp-assets = { path = "../swamp-assets", version = "0.0.10" }
swamp-loader-plugin = { path = "../swamp-loader-plugin", version = "0.0.10" }
swamp-asset-registry = { path = "../swamp-asset-registry", version = "0.0.10" }
tracing = "0.1.40"
image = "0.25.5"
